--- a/css/nav.css
+++ b/css/nav.css
@@ -117,6 +117,12 @@ body {
   color: black;
 }
 
+.in-progress {
+  opacity: 50%;
+  pointer-events: none;
+  cursor: default;
+}
+
 /* For screens that are 768px wide or less */
 @media screen and (max-width: 1080px) {
   .header { display: flex; }
