--- a/css/projects/69-love-songs/main.css
+++ b/css/projects/69-love-songs/main.css
@@ -1,5 +1,6 @@
 body {
-  background-color: black;
+  /* background-color: black; */
+  background-color: tomato;
   color: #efefef;
 }
 
@@ -120,11 +121,9 @@ p {
 #main-content {
   display: none;
   grid-template-columns: 1fr 10fr 1fr;
-  grid-gap: 15px;
+  grid-template-areas: "prev home next" "prev song next";
+  grid-row-gap: 50px;
   text-align: center;
-  grid-template-areas:
-          "prev home next"
-          "song song song";
 }
 
 #previous {
@@ -136,7 +135,20 @@ p {
 }
 
 #home {
-  display: none;
+  grid-area: home;
+}
+
+#home img, #home-mobile img {
+  width: 35px;
+  padding-top: 5px;
+}
+
+#home-mobile {
+  margin: auto;
+}
+
+#main-content > #shell {
+  grid-area: song;
 }
 
 #track-lyrics {
@@ -209,12 +221,4 @@ p {
 
 #main-content button:hover, #mobile-slider button:hover {
   background-color: rgba(192,192,192,0.3);
-}
-
-#home-mobile {
-  margin: auto;
-}
-
-#home-mobile img {
-  padding-top: 10px;
 }
