--- a/css/projects/69-love-songs/main-media.css
+++ b/css/projects/69-love-songs/main-media.css
@@ -1,19 +1,19 @@
-@media only screen and (max-height: 900px) {
+@media all and (max-height: 1000px) {
   #main-container {
     height: auto;
     margin: 75px 0px;
   }
   #lyrics-content {
-    margin: 25px 0px;
+    margin: 10vh 0px;
   }
   #track-lyrics {
-    grid-auto-rows: 75vh;
+    grid-auto-rows: 65vh;
   }
 }
 
-@media only screen and (max-height: 600px) {
+@media all and (max-height: 600px) {
   #lyrics-content {
-    margin: 0px;
+    margin: 75px 0px 0px;
   }
   #track-lyrics {
     grid-auto-rows: 450px;
@@ -22,84 +22,75 @@
 
 /* For screens that are 1080px wide or less */
 @media all and (max-width: 1080px) {
+  #trackArtist, #trackAlbum {
+    font-size: 1rem;
+  }
+
   #trackTitle {
     font-size: 1.25rem;
-    margin-block-end: 0.5rem;
   }
-  #trackNumberVolume, #trackArtist, #trackAlbum {
-    font-size: 1rem;
-    margin-block-end: 0.5rem;
-  }
-  h1 { font-size: 2rem; }
-  h2 { font-size: 1.5rem; }
-  p  { font-size: 1.15rem; }
 }
 
 /* For screens that are 980px wide or less */
 @media all and (max-width: 980px) {
-  #album-content, #lyrics-content {
-    width: 100%;
+  /* H2 */
+  #trackArtist, #trackAlbum {
+    font-size: 1rem;
+    margin-block-end: 0.5rem;
   }
+  /* H1 */
+  #trackTitle {
+    margin-block-end: 0.5rem;
+  }
+
+  h1 {
+    font-size: 1.75rem;
+  }
+
+  h2 {
+    font-size: 1.15rem;
+  }
+
+  #lyrics-content {
+    margin: 0px;
+  }
+
   #main-content {
     grid-template-areas:
       "song song song"
       "prev home next";
+    grid-row-gap: 0px;
   }
   #previous, #next, #home {
     display: none;
   }
-  #mobile-slider {
-    display: grid;
-  }
   #main-container {
     height: 100%;
-  }
-  #shell {
-    margin: 100px auto 75px;
-    width: 450px;
-  }
-  #main-content button, #mobile-slider button {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-  }
-  #main-content button:hover, #mobile-slider button:hover {
-    background-color: rgba(192,192,192,0.3);
+    margin: 95px 0px;
   }
 
-
-  #album-volumes {
-    height: 100%;
-  }
   #album-trackList, #track-lyrics {
-    display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    grid-gap: 35px;
-  }
-  #track-fullLyrics {
-    text-align: center;
   }
   #album-cover img, #track-information img {
     width: 35%;
   }
-  #trackTitle {
-    font-size: 1.25rem;
-    margin-block-end: 0.5rem;
+  #mobile-slider {
+    display: grid;
   }
-  #trackNumberVolume, #trackArtist, #trackAlbum {
-    font-size: 1rem;
-    margin-block-end: 0.5rem;
+  #main-content button, #mobile-slider button {
+    width: 100%;
+    height: 100%;
   }
-  h1 { font-size: 1.75rem; }
-  h2 { font-size: 1.25rem; }
-  p { font-size: 1rem; }
 }
 
 /* For screens that are 450px wide or less */
 @media all and (max-width: 450px) {
-  #shell { width: 80%; }
-  h1 { font-size: 1.25rem; }
-  h2 { font-size: 1rem; }
-  p  { font-size: 1rem; }
+  h1 {
+    font-size: 1.25rem;
+  }
+  h2 {
+    font-size: 1rem;
+  }
 }
