--- a/css/projects/grid-project/main.css
+++ b/css/projects/grid-project/main.css
@@ -6,14 +6,9 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
-body, div, nav {
-  display: block;
-}
-
 img {
   width: 100%;
   vertical-align: middle;
-  border-style: none;
 }
 
 p {
@@ -41,59 +36,44 @@ p {
   filter: blur(50px);
 }
 
-.container {
-  margin: 0;
-  padding: 0;
-  height: 50%;
-  width: 100%;
-
-  position: absolute;
-  top: 50%;
-  bottom: 50%;
-  left: 50%;
-  right: 50%;
-  -ms-transform: translateX(-50%, -50%);
-  transform: translate(-50%, -50%);
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+#main-content, #container, #albumDisplay, #gridListed {
+  display: grid;
 }
 
-.row {
-  margin: 0;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+#container, #albumOriginal, #albumGrid {
+  margin: auto;
 }
 
-#albumArt, #albumCollection, #albumOriginal, #albumGrid, #albumDisplay, #albumTitle {
+#main-content {
   position: relative;
-  width: 100%;
+  height: 100vh;
+  padding: 100px 0;
+}
+
+#container {
+  width: 80%;
+  max-width: 1800px;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 25px;
+}
+
+#albumDisplay {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 25px;
 }
 
 #albumCollection {
   height: 600px;
-  overflow: auto!important;
-  padding: 0 0 0 25px;
-}
-
-#albumOriginal, #albumGrid {
-  flex: 0 0 50%;
-  max-width: 50%;
-}
-
-#albumDisplay {
-  padding: 0;
+  overflow: auto;
 }
 
 #gridListed {
   background-color: #efefef;
-  margin: 0 0 10px;
-  padding: 5px 0px;
+  margin-bottom: 15px;
+
+  grid-template-columns: 2fr 8fr;
+  grid-gap: 15px;
+  align-items: center;
 }
 
 #gridListed:hover {
@@ -101,56 +81,10 @@ p {
   cursor: pointer;
 }
 
-#albumArts {
-  padding: 0;
-  margin: 0;
-}
-
-#albumArt {
-  padding: 0px 5px 0px 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  -ms-flex: 0 0 16.666667%;
-  flex: 0 0 16.666667%;
-  max-width: 16.666667%;
-}
-
-#albumTitle {
-  padding: 0 15px;
-
-  -ms-flex: 0 0 83.333333%;
-  flex: 0 0 83.333333%;
-  max-width: 83.333333%;
-}
-
-#titleYear p {
-  display: inline-block;
-  position: relative;
+#albumTitle, #titleYear p {
   overflow: hidden;
-  white-space: nowrap;
-  width: 100%;
   text-overflow: ellipsis;
-}
-
-#albumOriginal {
-  padding: 0 10px 0 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  /* align-items: center; */
-  /* overflow: hidden; */
-}
-
-#albumOriginal img {
-  /* width: auto; */
-  /* height: 100%; */
-}
-
-#albumGrid {
-  padding: 0 0 0 10px;
+  white-space: nowrap;
 }
 
 .animate {
@@ -161,50 +95,47 @@ p {
     transition: all 0.5s ease-in-out;
 }
 
-@media (min-width: 320px) {
-  #albumCollection {
-    height: 45vh;
-    padding: 25px;
+#albumCollection::-webkit-scrollbar {
+  width: 10px;
+}
+
+#albumCollection::-webkit-scrollbar-thumb {
+  background: rgba(255,255,255,0.25);
+}
+
+#albumCollection::-webkit-scrollbar-thumb:hover {
+  background: rgba(255,255,255,0.75);
+}
+
+@media (max-width: 420px) {
+  #gridListed {
+    grid-template-columns: 1fr 3fr;
+  }
+}
+
+@media all and (min-width: 421px) and (max-width: 768px) {
+    #gridListed {
+      grid-template-columns: 1fr 5fr;
+    }
+}
+
+@media all and (min-width: 769px) and (max-width: 1079px) {
+  #gridListed {
+    grid-template-columns: 1fr 9fr;
+  }
+}
+
+@media all and (max-width: 1079px) {
+  #container {
+    grid-template-columns: 1fr;
+  }
+  #main-content {
+    padding: 85px 0;
   }
   #albumDisplay {
-    padding: 0 25px;
-  }
-}
-
-/* --- iPads --- */
-@media (min-width: 768px) {
-  .container {
-    max-width: 80%;
-  }
-
-  #albumDisplay {
-    flex: 0 0 66.666667%;
-    max-width: 66.666667%;
+    grid-gap: 15px;
   }
   #albumCollection {
-    -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-  }
-}
-
-/* --- Desktops and Laptops --- */
-@media (min-width: 1224px) {
-  .container {
-    max-width: 80%;
-  }
-}
-
-/* --- Large Screens --- */
-@media (min-width: 1824px) {
-  .container {
-    max-width: 65%;
-  }
-}
-
-
-@media (min-height:980px) {
-  .container {
-    top: 50%;
+    height: 50vh;
   }
 }
