--- a/css/nav.css
+++ b/css/nav.css
@@ -5,11 +5,12 @@ html {
 
 body {
   background-color: #22252D;
+  background-image: linear-gradient(45deg, rgba(41,61,146,.75), rgba(242,105,53,.75));
   margin: 0;
   line-height: 1.5;
 }
 
-.header, .header h2, .header a, .header-mobile, .about-button {
+.header, .header h2, .header a, .header-mobile, .header-mobile a, .about-button {
   font-family: 'Roboto Mono', monospace;
 }
 
@@ -113,7 +114,7 @@ body {
 }
 
 #links-mobile a:hover {
-  background-color: #ddd;
+  background-color: #4cb9e2;
   color: black;
 }
 
