--- a/css/nav.css
+++ b/css/nav.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-color: #22252D;
+  background-color: rgba(41,61,146,.75);
   background-image: linear-gradient(45deg, rgba(41,61,146,.75), rgba(242,105,53,.75));
   margin: 0;
   line-height: 1.5;
