--- a/css/nav.css
+++ b/css/nav.css
@@ -140,4 +140,6 @@ body {
 @media screen and (max-width: 450px) {
   .header { display: none!important; }
   .header-mobile { display: block!important; }
+  #wm-content { margin: 100px auto; }
+  #wm-social { grid-template-columns: 1fr; grid-gap: 20px; }
 }
